export const snapshot = {};

snapshot[`Cycle Current Command - Help Text 1`] = `
stdout:
"
Usage: current

Description:

  Show the current active cycle for a team

Options:

  -h, --help          - Show this help.                      
  --team      <team>  - Team key (defaults to current team)  
  -j, --json          - Output as JSON                       

"
stderr:
""
`;

snapshot[`Cycle Current Command - Shows Active Cycle 1`] = `
stdout:
"# Sprint 42

Number: 42
Start: 1/13/2026
End: 1/27/2026
Progress: 35%

## Description

Working on authentication improvements


## Issues (2)

- ENG-123: Fix login bug [In Progress]
- ENG-124: Add SSO support [Todo]
"
stderr:
""
`;

snapshot[`Cycle Current Command - JSON Output 1`] = `
stdout:
'{
  "number": 42,
  "name": "Sprint 42",
  "startsAt": "2026-01-13T00:00:00Z",
  "endsAt": "2026-01-27T00:00:00Z",
  "progress": 0.35,
  "issues": [
    {
      "identifier": "ENG-123",
      "title": "Fix login bug",
      "state": "In Progress"
    },
    {
      "identifier": "ENG-124",
      "title": "Add SSO support",
      "state": "Todo"
    }
  ]
}
'
stderr:
""
`;

snapshot[`Cycle Current Command - No Active Cycle 1`] = `
stdout:
"No active cycle found for team ENG
"
stderr:
""
`;

snapshot[`Cycle Current Command - JSON Output No Active Cycle 1`] = `
stdout:
"null
"
stderr:
""
`;
